ecmascript/parser/tests/test262-error-references/fail/ca2716d236c027cd.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/ca2716d236c027cd.js:1:51
  |
1 | function hello() { 'use strict'; ({ "\1": 42 }); }
  |                                                   ^

